# BAGuitar

./: CMakeLists.txt
examples/BA6_TGA_Pro_ExternalLoop_demo/: BA6_TGA_Pro_ExternalLoop_demo.ino
src/: BAAudioEffectLoopExternal.h  BAAudioEffectLoopSD.h  BAGuitar.h
src/effects/: BAAudioEffectLoopExternal.cpp  BAAudioEffectLoopSD.cpp
